--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jstamant/full-stack-open-phonebook-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0"
