--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon index.js",
     "deploy": "fly deploy",
     "logs": "fly logs",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,9 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.2",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.1.0"
   }
 }
